Java 17 compilation