@@ -1,52 +1,72 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.webnobis.consumption</groupId>
 	<artifactId>consumption</artifactId>
 	<name>Consumption</name>
-	<version>2.0.3-SNAPSHOT</version>
+	<version>2.0.3</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<deliver.repository.path>/home/steffen/Dokumente/medien/verbrauch</deliver.repository.path>
+		<project.module>com.webnobis.consumption</project.module>
+		<project.main.class>com.webnobis.consumption.ConsumptionMain</project.main.class>
+		<project.author>Steffen Nobis</project.author>
+		<junit.version>5.8.1</junit.version>
 	</properties>
 
+	<developers>
+		<developer>
+			<name>${project.author}</name>
+			<organization>WebNobis</organization>
+		</developer>
+	</developers>
 	<dependencies>
 		<dependency>
-			<groupId>org.jmockit</groupId>
-			<artifactId>jmockit</artifactId>
-			<version>1.46</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit.version}</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jfree</groupId>
 			<artifactId>jfreechart</artifactId>
-			<version>1.5.0</version>
+			<version>1.5.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.32</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>2.14.1</version>
 		</dependency>
 	</dependencies>
 
 	<build>
 		<finalName>${project.artifactId}_${project.version}</finalName>
-
 		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+				<includes>
+					<include>*.*</include>
+				</includes>
+			</resource>
 			<resource>
 				<directory>src/main/resources</directory>
 				<filtering>true</filtering>
 				<includes>
 					<include>*.properties</include>
-					<include>*.xml</include>
 				</includes>
 			</resource>
 			<resource>
@@ -58,21 +78,20 @@
 				<targetPath>${project.build.directory}</targetPath>
 			</resource>
 		</resources>
-
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.0</version>
+				<version>3.8.1</version>
 				<configuration>
-					<source>11</source>
-					<target>11</target>
+					<source>17</source>
+					<target>17</target>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.0.1</version>
+				<version>3.3.1</version>
 				<configuration>
 					<show>protected</show>
 					<nohelp>true</nohelp>
@@ -81,21 +100,39 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.1.0</version>
+				<version>3.2.0</version>
 				<configuration>
+					<outputDirectory>${project.build.directory}/modules</outputDirectory>
 					<archive>
 						<manifest>
-							<addClasspath>true</addClasspath> <!-- adds the "lib" to classpath -->
+							<addClasspath>true</addClasspath>
 							<classpathPrefix>lib/</classpathPrefix>
-							<mainClass>com.webnobis.consumption.ConsumptionMain</mainClass>
+							<mainClass>${project.main.class}</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.2.0</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/modules</outputDirectory>
+							<includeScope>compile</includeScope>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>3.1.0</version>
+				<version>3.3.0</version>
 				<configuration>
 					<descriptors>
 						<descriptor>src/main/assembly/assembly.xml</descriptor>
@@ -112,19 +149,66 @@
 				</executions>
 			</plugin>
 			<plugin>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>0.0.7</version>
+				<executions>
+					<execution>
+						<!-- Default configuration for running with: mvn clean javafx:run -->
+						<id>default-cli</id>
+						<configuration>
+							<mainClass>${project.main.class}/${project.main.class}</mainClass>
+							<launcher>app</launcher>
+							<jlinkZipName>app</jlinkZipName>
+							<jlinkImageName>app</jlinkImageName>
+							<noManPages>true</noManPages>
+							<stripDebug>true</stripDebug>
+							<noHeaderFiles>true</noHeaderFiles>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M3</version>
+				<version>3.0.0-M5</version>
 				<configuration>
-					<argLine>
-						-javaagent:${settings.localRepository}/org/jmockit/jmockit/1.46/jmockit-1.46.jar
-					</argLine>
+					<argLine>--add-opens
+						${project.module}/${project.module}=ALL-UNNAMED
+						--add-opens
+						${project.module}/${project.module}.config=ALL-UNNAMED
+						--add-opens
+						${project.module}/${project.module}.export=ALL-UNNAMED
+						--add-opens
+						${project.module}/${project.module}.model=ALL-UNNAMED
+						--add-opens
+						${project.module}/${project.module}.persistence=ALL-UNNAMED
+						--add-opens
+						${project.module}/${project.module}.service=ALL-UNNAMED
+						--add-opens ${project.module}/${project.module}.view=ALL-UNNAMED
+						--add-opens
+						${project.module}/${project.module}.view.entry=ALL-UNNAMED
+						--add-opens
+						${project.module}/${project.module}.view.items=ALL-UNNAMED</argLine>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<outputDirectory>target/surefire-report-site</outputDirectory>
+					<linkXRef>false</linkXRef>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<phase>test</phase>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
 
-	<organization>
-		<name>Steffen Nobis</name>
-		<url>http://www.webnobis.com</url>
-	</organization>
 </project>
